# ADTR2

./: Citation.bib  Doxyfile  Readme.md
adtr2_base/: CMakeLists.txt  package.xml
adtr2_base/include/adtr2_base/: ADTR2Module.hpp  AUVController.hpp  AUVDirector.hpp  AUVMonitor.hpp
adtr2_base/src/: AUVController.cpp  AUVDirector.cpp  AUVMonitor.cpp
adtr2_bringup/: CMakeLists.txt  package.xml
adtr2_bringup/launch/: auv.daq.launch.py  auv.monitor.launch.py  auv.system.launch.py  exporter.launch.py
adtr2_interfaces/: CMakeLists.txt  package.xml
adtr2_models/: CMakeLists.txt  package.xml
adtr2_models/src/: adtr2_model_exporter.py  model_exporter.py  model_exporter.sh  stage_2.env
automata_deployment_toolkit_ros2/: CMakeLists.txt  package.xml
automata_deployment_toolkit_ros2/config/: nmea_serial_driver.yaml  ohy_params.yaml  qhy_params.yaml  settings.yaml
automata_deployment_toolkit_ros2/config/zed/: common.yaml  ffmpeg.yaml  zed2i.yaml
